# slamutils-python

./: .gitignore  LICENSE  README.md  box_plots.py  colmap.py  colmap_stereo_test.py  colmap_utils.py  colmap_vio_sync.py  combine_traj_pcl.py  coral_square_plots.py  draw_aruco_tags.py  feature_detection.py  gaussian_blur.py  iros_traj_plot.py  multicolor_line.py  plot_tags.py  plot_traj.py  plot_traj_single.py  pyproject.toml  reef_lawnmower.py  shipwreck_pcl.py  shipwreck_switch_plot.py  shipwreck_traj_loop_plot.py  sphipwreck_switch_plot.py  stereo_calibration_test.py  stereo_rectification.py  tajectory_stats.py  vinsmono_to_tum.py
comparison_paper/: compute_results.py  interpolate_traj.py
coral_square/: prim_traj.txt  prim_traj_old.txt  svin_traj.txt  svin_with_clahe.txt  switch_info.txt
coral_square_trajs/: robust_traj_0.txt  robust_traj_1.txt  robust_traj_2.txt  robust_traj_3.txt  robust_traj_4.txt
data/: stereo_rig_calib.yaml  stereo_rig_calib2.yaml  stereo_rig_calib3.yaml  stereo_rig_calib4.yaml  stereo_rig_calib_orig.yaml  stereo_rig_checkerboard.yaml
reef_lawnmower/: prim_traj.txt  svin_gt.txt  svin_gt1.txt  svin_gt3.txt  svin_traj.txt  switch_info.txt
reef_lawnmower_trajs/: robust_traj_3_30_0.txt  robust_traj_3_30_1.txt  robust_traj_3_30_2.txt  robust_traj_3_30_3.txt  robust_traj_3_30_4.txt  robust_traj_3_45_0.txt  robust_traj_3_45_1.txt  robust_traj_3_45_2.txt  robust_traj_3_45_3.txt  robust_traj_3_45_4.txt  robust_traj_5_20_0.txt  robust_traj_5_20_1.txt  robust_traj_5_20_2.txt  robust_traj_5_20_3.txt  robust_traj_5_20_4.txt
traj_eval/: plot_3d.py  (+1 more)
(+173 files in other folders)
